tests/fail/semantics/native_recover_type_mismatch/main.kira
struct LeftState {
    var count: Int
}

struct RightState {
    var total: Int
}

@Main
function entry() {
    var state = nativeState(LeftState { count: 0 })
    var value = nativeRecover<RightState>(nativeUserData(state))
    return
}
